# sushi-py

./: .gitignore  LICENSE  README.md  paper_figure_v014.py  paper_figure_v015.py  pyproject.toml
docs/: API.md  CHANGELOG.md  QUICKSTART.md  VIGNETTE.md
docs/examples/: ex01_dnasei_bedgraph.py  ex02_overlay.py  ex03_flip.py  ex04_hic.py  ex05_bedpe_loops.py  ex06_bedpe_ribbons.py  ex07_bed_region.py  ex08_bed_circles.py  ex09_bed_splitstrand.py  ex10_bed_several_factors.py  ex12_manhattan.py  ex13_plotGenes.py  ex14_plotGenes_colorby.py  ex15_zoom.py
examples_R_real/: R_Ex1.py  R_Ex2.py  R_Ex3.py  R_Ex4_to_Ex15.py  R_real_example_mapping.json
panels/: K_panel.py
sushi/: __init__.py  _axes.py  _helpers.py  data.py  plotters.py  vignette.py
sushi/data/: Sushi_5C.bedpe.csv  Sushi_ChIAPET_pol2.bedpe.csv  Sushi_ChIPExo_CTCF.bedgraph.csv  Sushi_ChIPSeq_CTCF.bedgraph.csv  Sushi_ChIPSeq_pol2.bed.csv  Sushi_ChIPSeq_pol2.bedgraph.csv  Sushi_ChIPSeq_severalfactors.bed.csv  Sushi_DNaseI.bedgraph.csv  Sushi_GWAS.bed.csv  Sushi_HiC.matrix.csv  Sushi_RNASeq_K562.bedgraph.csv  Sushi_genes.bed.csv  Sushi_hg18_genome.csv  Sushi_transcripts.bed.csv
