[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sushi-py"
version = "0.1.2"
description = "Python port of Sushi R/Bioconductor package (Phanstiel et al., 2015)"
readme = "README.md"
license = { text = "GPL-2.0-or-later" }
authors = [{ name = "Qianli", email = "dongql043@nenu.edu.cn" }]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20",
    "pandas>=1.2",
    "matplotlib>=3.4",
]

[project.optional-dependencies]
dev = ["pytest>=7", "rdata>=1.0"]

[project.urls]
"Bug Reports" = "https://github.com/local/sushi-py/issues"
"Source"      = "https://github.com/local/sushi-py"

[tool.setuptools]
packages = ["sushi"]
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
"sushi" = ["data/*.csv", "vignette_output/*.png"]

[tool.setuptools.data-files]
"" = ["README.md", "docs/*.md", "docs/examples/*.py"]
